syntax = "proto3";

package grpc.parcels;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.eagle.grpc.parcels.lib";
option java_outer_classname = "ParcelsProto";
option go_package = "common/parcels";

service Parcels {
  rpc GetParcels(google.protobuf.Empty) returns (stream ParcelMessage){}
  rpc SaveOrUpdateParcel(ParcelMessage) returns (google.protobuf.Empty){}
  rpc GetParcelsInProgress(google.protobuf.Empty) returns (stream ParcelMessage){}
}

message ParcelMessage {
  string trackingCode = 2;
  optional string uuid = 1;
  optional string name = 3;
  optional string origin = 4;
  optional string destination = 5;
  optional string lastUpdate = 6;
  optional string status = 7;
  optional string zipCode = 8;
  optional bool isDone = 9;
}